[tool.poetry]
name = "screener"
version = "0.0.1"
description = "A naive project for Binance BTC \u0026 ETH futures spread strategy"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "screener"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"